cmake_minimum_required(VERSION 3.17)
project(TheCProgrammingLanguageExercises C)

set(CMAKE_C_STANDARD 99)

add_executable(Exercise_1-8 Lesson_1/Exercise_1-8.c)
add_executable(Exercise_1-9 Lesson_1/Exercise_1-9.c)
add_executable(Exercise_1-10 Lesson_1/Exercise_1-10.c)
add_executable(Exercise_1-12 Lesson_1/Exercise_1-12.c)
add_executable(Exercise_1-13 Lesson_1/Exercise_1-13.c)
add_executable(Exercise_1-14 Lesson_1/Exercise_1-14.c)
add_executable(Exercise_1-15 Lesson_1/Exercise_1-15.c)
add_executable(Exercise_1-16 Lesson_1/Exercise_1-16.c)
