cmake_minimum_required(VERSION 3.17)
project(TheCProgrammingLanguageExercises C)

set(CMAKE_C_STANDARD 99)

add_executable(Exercise_1-8 Lesson_1/Exercise_1-8.c)
add_executable(Exercise_1-9 Lesson_1/Exercise_1-9.c)
add_executable(Exercise_1-10 Lesson_1/Exercise_1-10.c)
add_executable(Exercise_1-12 Lesson_1/Exercise_1-12.c)
add_executable(Exercise_1-13 Lesson_1/Exercise_1-13.c)
add_executable(Exercise_1-14 Lesson_1/Exercise_1-14.c)
add_executable(Exercise_1-15 Lesson_1/Exercise_1-15.c)
add_executable(Exercise_1-16 Lesson_1/Exercise_1-16.c)
add_executable(Exercise_1-17 Lesson_1/Exercise_1-17.c)
add_executable(Exercise_1-18 Lesson_1/Exercise_1-18.c)
add_executable(Exercise_1-19 Lesson_1/Exercise_1-19.c)
add_executable(Exercise_1-20 Lesson_1/Exercise_1-20.c)
add_executable(Exercise_1-21 Lesson_1/Exercise_1-21.c)
add_executable(Exercise_1-22 Lesson_1/Exercise_1-22.c)

add_executable(Exercise_2-1 Lesson_2/Exercise_2-1.c)
add_executable(Exercise_2-2 Lesson_2/Exercise_2-2.c)
add_executable(Exercise_2-3 Lesson_2/Exercise_2-3.c)
add_executable(Exercise_2-4 Lesson_2/Exercise_2-4.c)
add_executable(Exercise_2-5 Lesson_2/Exercise_2-5.c)
add_executable(Exercise_2-6 Lesson_2/Exercise_2-6.c)
add_executable(Exercise_2-7 Lesson_2/Exercise_2-7.c)
add_executable(Exercise_2-8 Lesson_2/Exercise_2-8.c)
